# ai-local-voice-assistant-rtx

./: .gitignore  CHANGELOG.md  CONDA_SETUP.md  KOKORO_INSTALL.md  KOKORO_INTEGRATION_SUMMARY.md  LAUNCHER_SETUP.md  LICENSE  README.md  SETUP_COMPLETE.md  launch.ps1  pyproject.toml  requirements.txt  start_voice_assistant.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: config.yaml
demos/: README.md  demo_azure_tts.py  demo_openai_tts.py  demo_piper_tts.py  list_voices.py  piper_wav_demo.py  simple_piper_demo.py  test_auto_tts.py  test_pyttsx3.py  try_bark_fix.py
docs/: upgrade-plan.md
legacy/src/: kokoro_tts.py  llm_providers.py  tts_service.py  ultimate_voice_assistant.py  ultimate_voice_assistant2.py  windows_tts.py
scripts/: Start Voice Assistant.vbs  create_shortcut.ps1  install_kokoro.ps1  launch.ps1  start_voice_assistant.ps1
src/: __init__.py  pyttsx3_tts.py  riva_tts.py  tts_service.py  ultimate_voice_assistant.py  windows_tts.py
voice-assistant/: config.yaml  main.py  old.pixi.toml  readme.md
voice-assistant/src/: agent_setup.py  assistant.py  audio_utils.py  config.py  config_loader.py  kokoro_tts.py  llm_providers.py  porcupine_wake.py  tts_service.py  windows_tts.py
voice-assistant/tests/: test_assistant.py  test_config_loader.py  test_llm_select.py
