[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant-windows"
version = "1.0.0"
description = "A powerful AI-driven voice assistant for Windows"
readme = "README.md"

# This section is for Pixi's CONDA packages
[tool.pixi.dependencies]
python = "3.12.*"
pip = "*"
pytorch = "*"
pytorch-cuda = "12.4.*"
torchvision = "*"
torchaudio = "*"
transformers = "*"
numpy = "*"
langchain = "==0.3.27" # Lock to the old version that works with your script
langchain-community = "*"
langchain-core = "*"
langchain-text-splitters = "*"
rich = "*"
pyyaml = "*"
requests = "*"
httpx = "*"
sqlalchemy = "*"

# This section is for Pixi's PIP packages
[tool.pixi.pypi-dependencies]
faster-whisper = "*"
ctranslate2 = "*"
sounddevice = "*"
pynput = "==1.7.6"
pyautogui = "*"
Pillow = "*"
kokoro = "*"
pyttsx3 = "*"
# We will install autoawq and triton-windows manually

[tool.pixi.workspace]
# Defines all channels with the correct priority
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["win-64"]

[tool.pixi.tasks]
start = { cmd = "python src/ultimate_voice_assistant.py", env = { KMP_DUPLICATE_LIB_OK = "TRUE" } }